--- a/app/src/main/res/layout/user_info_item.xml
+++ b/app/src/main/res/layout/user_info_item.xml
@@ -3,10 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/ltRoot"
         style="@style/ElevatedCardViewStyle"
@@ -28,7 +24,8 @@
                 style="@style/CircleProfileImageStyle"
                 android:layout_width="@dimen/_75sdp"
                 android:layout_height="@dimen/_75sdp"
-                app:srcCompat="@drawable/profile_place_holder" />
+                app:srcCompat="@drawable/profile_place_holder"
+                android:layout_gravity="center_vertical"/>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -41,7 +38,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:divider="@drawable/divider_section_space"
                     app:showDividers="middle">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
@@ -49,7 +45,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="vertical"
-                        app:divider="@drawable/divider_section_space"
                         app:showDividers="middle">
 
                         <androidx.appcompat.widget.AppCompatTextView
@@ -59,10 +54,19 @@
                             android:drawableEnd="@drawable/ic_verified_done"
                             android:text="@string/not_provided" />
 
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/gender"
+                            style="@style/Body_7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLines="1"
+                            tools:text=""/>
+
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
+                            android:paddingTop="@dimen/section_space"
                             app:divider="@drawable/divider_section_space"
                             app:showDividers="middle">
 
@@ -106,7 +110,8 @@
                         style="@style/RoundedImageStyle"
                         android:layout_width="@dimen/_55sdp"
                         android:layout_height="@dimen/_55sdp"
-                        app:srcCompat="@drawable/place_holder" />
+                        app:srcCompat="@drawable/place_holder"
+                        android:layout_gravity="center_vertical"/>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
