--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -78,7 +78,8 @@
                             android:visibility="visible"
                             android:background="@color/transparent_color"
                             tools:itemCount="1"
-                            tools:listitem="@layout/rv_driver_side_passengers_item" />
+                            tools:listitem="@layout/rv_driver_side_passengers_item"
+                            android:layout_marginTop="@dimen/section_space"/>
 
                         <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/tvDriverSidePassengersNotAvailable"
