fixing reviews section

--- a/app/src/main/res/layout/vehicle_info_item.xml
+++ b/app/src/main/res/layout/vehicle_info_item.xml
@@ -76,7 +76,7 @@
                         android:layout_weight=".25"
                         android:src="@drawable/edit_info"
                         app:tint="@color/primary_color"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                     </androidx.appcompat.widget.AppCompatImageButton>
 
