add pickup status screen

--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -242,10 +242,10 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btnStartTrip"
-                        style="@style/PrimaryRoundedButton"
+                        style="@style/PrimaryRoundedButtonLessPadding"
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        android:text="@string/start_trip" />
+                        android:text="@string/pickup_passengers" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
