--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -379,6 +379,20 @@
         <item name="android:background">@drawable/button_primary_rounded</item>
     </style>
 
+    <style name="PrimaryRoundedButtonLessPadding" parent="Widget.Material3.Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/field_height</item>
+        <item name="android:paddingStart">@dimen/_1sdp</item>
+        <item name="android:paddingEnd">@dimen/_1sdp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+        <item name="android:fontFamily">@font/noto_sans_bold</item>
+        <item name="backgroundTint">@null</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:background">@drawable/button_primary_rounded</item>
+    </style>
+
     <style name="SecondaryRoundedButton" parent="Widget.Material3.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/field_height</item>
