--- a/app/src/main/res/layout/trip_editable_route_item.xml
+++ b/app/src/main/res/layout/trip_editable_route_item.xml
@@ -207,21 +207,21 @@
                                 android:layout_alignParentStart="true"
                                 android:layout_centerVertical="true"
                                 android:background="@drawable/custom_btn_remove"/>
+
                             <EditText
                                 android:id="@+id/itemQuanEt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
-                                android:minEms="1"
-                                android:text="1"
-                                android:textAllCaps="false"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="20sp"
                                 android:background="@null"
                                 android:focusable="false"
                                 android:inputType="none"
-                                />
+                                android:minEms="1"
+                                android:text="1"
+                                android:textAlignment="center"
+                                android:textAllCaps="false"
+                                android:textColor="@android:color/black"
+                                android:textSize="20sp" />
                             <Button
                                 style="@style/PrimaryRoundedButton"
                                 android:id="@+id/addBtn"
