fix become driver and adding new luggage restriction

--- a/app/src/main/res/layout/activity_your_profile.xml
+++ b/app/src/main/res/layout/activity_your_profile.xml
@@ -89,22 +89,23 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
+                            android:gravity="center"
                             >
 
                             <com.fredporciuncula.phonemoji.PhonemojiFlagTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:textSize="16sp"
                                 app:phonemoji_flagFor="@id/tePhoneNumber"
                                 />
 
                             <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
+                                style="@style/TextInputEditTextStyle"
                                 android:id="@+id/tePhoneNumber"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="@string/your_phone_number_here"
                                 android:inputType="phone"
+                                android:textSize="16sp"
                                 />
 
                         </LinearLayout>
